# kuroko_ros

./: .cmake-format  .gitignore  .rosinstall  .yamllint  README.md
.github/workflows/: ci.yaml
kuroko_description/: CMakeLists.txt  README.md  package.xml
kuroko_description/config/: gazebo_dc_motor.yaml  gazebo_pid.yaml  joint_control_effort.yaml  joint_control_position.yaml  joint_control_trajectory.yaml
kuroko_description/config/gazebo_dc_motor/dynamixel/: xh430_w210_11v.yaml  xh430_w210_12v.yaml  xh430_w210_15v.yaml  xm540_w150_11v.yaml  xm540_w150_12v.yaml  xm540_w150_15v.yaml
kuroko_description/launch/: roboone_gazebo.launch  roboone_large.launch  roboone_small.launch  set_home_position.launch  urdf.rviz
kuroko_description/launch/test/: reload.launch  test_xacro.launch  urdf.rviz
kuroko_description/meshes/roboone_ring/stl/: large_ring.stl  small_ring.stl
kuroko_description/worlds/: default.world
kuroko_description/xacro/kuroko/: kuroko.sdf  kuroko.urdf  kuroko.xacro
kuroko_description/xacro/kuroko/parts/: arm_l.xacro  arm_r.xacro  body.xacro  leg_l.xacro  leg_r.xacro
kuroko_description/xacro/kuroko/transmission/: arm_l.gazebo  arm_r.gazebo  body.gazebo  leg_l.gazebo  leg_r.gazebo
kuroko_description/xacro/physics/: box_physics.xacro  default_gazebo_params.xacro  gazebo_passive_joint.xacro
kuroko_description/xacro/roboone_ring/: large_ring.gazebo  large_ring.xacro  small_ring.gazebo  small_ring.xacro
kuroko_description/xacro/sensors/: imu.xacro  urg.xacro
kuroko_description/xacro/sensors/depth/: azure_kinect.xacro  azure_kinect_gazebo.xacro  maixsense_a075v.xacro  maixsense_a075v_gazebo.xacro
kuroko_description/xacro/sensors/imu/: imu.xacro  n100.xacro  n100_gazebo.xacro  n100mini.xacro  n100mini_gazebo.xacro
kuroko_description/xacro/sensors/lidar/: urg.xacro
kuroko_motion/: CMakeLists.txt  README.md  package.xml
kuroko_motion/include/motion_player/: main.h
kuroko_motion/launch/include/: rqt_joint_trajectory_controller.launch
kuroko_motion/motion/stand/: motion.yaml
kuroko_motion/motion/wake_f/: motion.yaml
kuroko_motion/motion/wake_r/: motion.yaml
kuroko_motion/src/motion_creator_gui/: main.cpp
