<package>
  <name>kuroko_description</name>
  <version>2.3.11</version>
  <description>
     URDF(for Rviz) and SDF(for Gazebo) files for kuroko.
  </description>
  <author>nyxrobotics</author>
  <author email="a@gmail.com">nyxrobotics</author>
  <maintainer email="a@gmail.com">nyxrobotics</maintainer>
  <license>BSD</license>
  <url type="website">http://</url>
  <url type="repository">https://github.com/nyxrobotics/kuroko_ros</url>
  <url type="bugtracker">https://github.com/nyxrobotics/kuroko_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
