<package>
  <name>kuroko_motion</name>
  <version>0.0.0</version>
  <description>
    Frame-by-frame motion player for kuroko
  </description>
  <author>nyxrobotics</author>
  <author email="nyxroboticss@gmail.com">nyxrobotics</author>
  <maintainer email="nyxroboticss@gmail.com">nyxrobotics</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/nyxrobotics</url>
  <url type="repository">https://github.com/nyxrobotics/kuroko_ros</url>
  <url type="bugtracker">https://github.com/nyxrobotics/kuroko_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>
</package>